# Ox

./: .gitignore  CMakeLists.txt
include/: macros.hpp  nuclei.hpp
include/core/: elastic.hpp  library.hpp  string.hpp  thread.hpp
include/crypto/: crc.hpp
include/formats/: jpeg.hpp  matroska.hpp  qoi.hpp
include/io/: stream.hpp
include/net/: socket.hpp  udp.hpp
src/: crc.cpp  elastic.cpp  env.cpp  filesystem.cpp  fstream.cpp  library.cpp  macros.hpp  main.cpp  nuclei.cpp  nuclei.hpp  qoi.cpp  stream.cpp  string.cpp  string.hpp  thread.cpp
src/core/: elastic.hpp  env.cpp  env.hpp  library.cpp  string.cpp  string.hpp  thread.cpp
src/crypto/: crc.cpp  crc.hpp
src/formats/: png.hpp
src/io/: filesystem.cpp  filesystem.hpp  fstream.cpp  fstream.hpp  stream.cpp  stream.hpp
src/net/: udp.hpp
src/test/: main.cpp
test/: cost-cor.qoi  main.cpp
